--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../appcompat_v7
-android.library.reference.2=../../iWantAndroid/iWantAndroid/Frameworks/google-play-services_lib
+android.library.reference.1=../../Desktop/adt-bundle-mac-x86_64-20131030/sdk/extras/android/support/v7/appcompat
+android.library.reference.2=../workspace_android/google-play-services_lib
