--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="19" />
 
     <application
@@ -21,6 +21,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.happy.home.FractionActivity"
+            android:label="@string/title_activity_fraction" >
+        </activity>
+        <activity
+            android:name="com.happy.home.DetailActivity"
+            android:label="@string/title_activity_detail" >
         </activity>
     </application>
 
