--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ target
  
 # Local configuration file (sdk path, etc)
 local.properties
+project.properties
  
 # Eclipse project files
 .classpath
